--- a/Android_Basic_Study/Android_Basic_Study/app/src/main/res/layout/activity_main.xml
+++ b/Android_Basic_Study/Android_Basic_Study/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,230 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btnCancel"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="C"
+                android:textSize="20sp"
+                android:onClick="clearButtonClicked"/>
+
+            <Button
+                android:id="@+id/btn"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="( )"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnRest"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="%"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnDiv"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="/"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btnNum7"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="7"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnNum8"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="8"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnNum9"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="9"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnMult"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="X"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btnNum4"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="4"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnNum5"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="5"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnNum6"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="6"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnSubt"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="-"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="162dp"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btnNum1"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="1"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnNum2"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="2"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnNum3"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="3"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+
+            <Button
+                android:id="@+id/btnNumPlus"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="+"
+                android:textSize="20sp"
+                android:onClick="onClickListener"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btnNull"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text=""
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnNum0"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="0"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnNumDot"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="."
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnEqual"
+                android:layout_width="30dp"
+                android:layout_height="50dp"
+                android:text="="
+                android:textSize="20sp"
+                android:onClick="resultButtonClicked"/>
+        </TableRow>
+    </TableLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginEnd="24dp"
+        android:gravity="end"
+        android:text=""
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.086" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginEnd="24dp"
+        android:gravity="end"
+        android:text=""
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.079" />
 </androidx.constraintlayout.widget.ConstraintLayout>
