--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_card.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_card.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.CardFragment">
+    <Toolbar
+        android:id="@+id/frag_card_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+    </Toolbar>
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:dividerColor="#A4A5A5"
+        app:layout_constraintBottom_toBottomOf="@id/frag_card_toolbar"/>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/frag_card_toolbar"
+        app:layout_constraintBottom_toBottomOf="parent" >
+    </androidx.viewpager2.widget.ViewPager2>
 
 
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
