--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_main.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_main.xml
@@ -20,6 +20,12 @@
             />
     </Toolbar>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintBottom_toBottomOf="@id/frag_main_toolbar" />
+
     <TextView
         android:id="@+id/bookmark"
         android:layout_width="wrap_content"
