--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/item_new_images_rv.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/item_new_images_rv.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rv_img"
-    android:layout_width="wrap_content"
-    android:layout_height="170dp"
-    android:scaleType="fitXY"
-    android:adjustViewBounds="true"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:background="@drawable/cookie">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <ImageView
+        android:id="@+id/photo_rv_img"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/cookie" />
     <TextView
         android:id="@+id/rv_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/photo_rv_img"
+        app:layout_constraintBottom_toBottomOf="@id/photo_rv_img"
+        tools:text="hi"
         />
-</ImageView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
