--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/values/themes.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Android_Basic_Study_08" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Android_Basic_Study_08" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowBackground">#FFFFFF</item>
     </style>
 
     <style name="Theme.Android_Basic_Study_08" parent="Base.Theme.Android_Basic_Study_08" />
