--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_card.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_card.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.CardFragment">
+    tools:context=".ui.card.CardFragment">
     <Toolbar
         android:id="@+id/frag_card_toolbar"
         android:layout_width="match_parent"
