--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/item_bookmark_rv.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/item_bookmark_rv.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bookmark_rv_img"
-    android:layout_width="wrap_content"
-    android:layout_height="170dp"
-    android:scaleType="fitXY"
-    android:adjustViewBounds="true"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:background="@drawable/cookie"/>
+
+    <ImageView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/bookmark_rv_img"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/cookie" />
