--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_main.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_main.xml
@@ -26,42 +26,54 @@
         android:background="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="@id/frag_main_toolbar" />
 
-    <TextView
-        android:id="@+id/bookmark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BookMark"
-        android:textSize="24sp"
-        android:layout_margin="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/frag_main_toolbar" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/bookmark_rv"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bookmark"
-        app:layout_constraintVertical_bias="0.021"
-        tools:layout_editor_absoluteX="-40dp" />
-
-    <TextView
-        android:id="@+id/new_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Images"
-        android:textSize="24sp"
-        android:layout_margin="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bookmark_rv" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/new_image_rv"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_image" />
+        app:layout_constraintTop_toBottomOf="@id/frag_main_toolbar">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/bookmark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BookMark"
+                android:textSize="24sp"
+                android:layout_margin="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frag_main_toolbar"
+                tools:ignore="NotSibling" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/bookmark_rv"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/bookmark"
+                app:layout_constraintVertical_bias="0.021"
+                tools:layout_editor_absoluteX="-40dp" />
+
+            <TextView
+                android:id="@+id/new_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Images"
+                android:textSize="24sp"
+                android:layout_margin="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/bookmark_rv" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/new_image_rv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintTop_toBottomOf="@id/new_image" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
