--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_detail.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/fragment_detail.xml
@@ -21,6 +21,16 @@
             android:layout_gravity="start"
             android:src="@drawable/ic_close" />
 
+        <TextView
+            android:id="@+id/username_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginStart="30dp"
+            android:textColor="@color/white"
+            android:text="Username"
+            android:textSize="16sp" />
+
         <ImageButton
             android:id="@+id/btn_detail_bookmark"
             android:layout_width="wrap_content"
@@ -68,8 +78,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginStart="30dp"
+        android:textColor="@color/white"
         android:textSize="16sp"
+        android:maxLines="2"
+        android:maxWidth="300dp"
+        android:ellipsize="end"
         app:layout_constraintTop_toBottomOf="@id/title_txt"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+    <TextView
+        android:id="@+id/tags_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="30dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:maxLines="2"
+        android:maxWidth="300dp"
+        android:ellipsize="end"
+        app:layout_constraintTop_toBottomOf="@id/des_txt"
         app:layout_constraintStart_toStartOf="parent"
         />
 
