--- a/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/item_new_images_rv.xml
+++ b/Android_Basic_Study/Android_Basic_Study_08/app/src/main/res/layout/item_new_images_rv.xml
@@ -20,6 +20,9 @@
         android:id="@+id/rv_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:maxWidth="300dp"
+        android:ellipsize="end"
         app:layout_constraintStart_toStartOf="@id/photo_rv_img"
         app:layout_constraintBottom_toBottomOf="@id/photo_rv_img"
         tools:text="hi"
